test/source/errors/mixed-indent.hc
// This file contains both tabs and spaces as indents.
// This should throw an error in the phase 2 parser.

// The cause of the error may not be clear if your
// text editor does not show visible whitespace.

forever
	output input
    output input
